--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,8 @@
 
 	<target name="deployToWeb" depends="build,cleanWeb,uploadFilesToProd" description="Sending Files to Prod" />
 
+	<target name="deployToPGB" depends="build,zip,uploadFilesToPGB" description="Sending Files to Phone Gap Build" />
+
 
 	<target name="test.ant" description="Exports the script of the database ">
 		<echo message="Testing ant in this environment. " />
@@ -21,7 +23,18 @@
 		<delete dir="${build.dir}"/>
 	</target>
 
-
+	<target name="uploadFilesToPGB" description="Handles uploading files to PhoneGap Build">
+		<echo message="Calling PhoneGap Build API's"/>
+		<exec executable='curl' failonerror='true'>
+			<arg value='-u'/>
+			<arg value='${pgb.username}:${pgb.password}'/>
+			<arg value='-X'/>
+			<arg value='PUT'/>
+			<arg value='-F'/>
+			<arg value='file=@${package.dir}/${ant.project.name}.zip'/>
+			<arg value='https://build.phonegap.com/api/v1/apps/${pgb.appid}'/>
+		</exec>
+	</target>
 
 	<target name="copyFilesToBuild" description="Create a gitless version of the source code.">
 		<echo message="Copying Files to Build Location"/>
@@ -29,6 +42,9 @@
 			<fileset dir="${basedir}">
 				<exclude name='.gitignore'/>
 				<exclude name='.git/**'/>
+				<exclude name='build.xml'/>
+				<exclude name='build.properties'/>
+				<exclude name='README'/>
 			</fileset>	
 		</copy>
 	</target>
@@ -59,6 +75,11 @@
 			</fileset>
 		</ftp>
 		
+	</target>
+
+	<target name="zip" description="Creates a zip file of the build.">
+		<echo message="Creating Zip File"/>
+		<zip destfile="${package.dir}\${ant.project.name}.zip" basedir="${build.dir}"/>
 	</target>
 
 	<target name="cleanWeb" description="Empties out Remote Directory.">
